Updating to use xdrive for node/npm to persist. Also added smart logic to verify if the npm version is already present to speed up deployment

--- a/web.config
+++ b/web.config
@@ -18,7 +18,7 @@
            </rules>
       </rewrite>
     <iisnode 
-      nodeProcessCommandLine="&quot;%appdata%\node\nodist\bin\node.exe&quot;"
+      nodeProcessCommandLine="&quot;c:\home\node\nodist\bin\node.exe&quot;"
       debuggingEnabled="false"
       logDirectory="..\..\LogFiles\nodejs" 
       watchedFiles="*.js;iisnode.yml;node_modules\*;views\*.jade;views\*.ejb;routes\*.js" />
